Replace collection calls with sequenced collection api