@@ -272,7 +272,7 @@ public final class FieldSet<T extends IOInstance<T>> extends AbstractList<IOFiel
 		
 		var size = data.size();
 		if(size == 1 && data instanceof List<IOField<T, ?>> l){
-			return new FieldSet<>(new IOField[]{l.get(0)});
+			return new FieldSet<>(new IOField[]{l.getFirst()});
 		}
 		
 		var safeData = new SetBuilder<T>(size);
